--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h3>Let's Discuss Your AI Needs</h3>
                     <p>Ready to explore local AI agents for your business? Contact us for a free consultation.</p>
                     <div class="contact-details">
-                        <p>📧 <a href="mailto:hello@riplay.ai">hello@riplay.ai</a></p>
+                        <p>📧 <a href="mailto:stanwesly@protonmail.com">stanwesly@protonmail.com</a></p>
                         <p>🌐 <a href="https://github.com/riplay">github.com/riplay</a></p>
                     </div>
                 </div>
