Update GitHub link in contact details

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p>Ready to explore local AI agents for your business? Contact us for a free consultation.</p>
                     <div class="contact-details">
                         <p>📧 <a href="mailto:stanwesly@protonmail.com">stanwesly@protonmail.com</a></p>
-                        <p>🌐 <a href="https://github.com/riplay">github.com/riplay</a></p>
+                        <p>🌐 <a href="https://github.com/riplay">github.com/Aeell</a></p>
                     </div>
                 </div>
                 <form class="contact-form" id="contactForm">
