--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RIPlay - Local AI Agent Solutions</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" href="logo.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,58 +14,61 @@
     <header class="hero">
         <nav class="navbar">
             <div class="logo">
-                <span class="logo-icon">🤖</span>
-                <span class="logo-text">RIPlay</span>
+                <img src="logo.png" alt="RIPlay Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#services">Služby</a></li>
+                <li><a href="#about">O nás</a></li>
+                <li><a href="#contact">Kontakt</a></li>
             </ul>
+            <div class="lang-toggle">
+                <a href="cs.html"><img src="img/cs.png" alt="Česky"></a>
+            </div>
         </nav>
+
         <div class="hero-content">
-            <h1>Local AI Agents<br>Built for Your Business</h1>
-            <p class="hero-subtitle">We design, deploy, and maintain custom AI agents that run locally on your infrastructure. Full control, maximum privacy, zero subscription fees.</p>
+            <h1>Lokální AI agenti<br>pro vaše podnikání</h1>
+            <p class="hero-subtitle">Jako IT freelancer nabízím open-source AI automatizace a agenty bez vendor lock-inu a cloudové závislosti. Běží lokálně na vašich strojích – plné vlastnictví, maximální soukromí, žádné předplatné.</p>
             <div class="hero-cta">
-                <a href="#contact" class="btn btn-primary">Get Started</a>
-                <a href="#services" class="btn btn-secondary">Learn More</a>
+                <a href="#contact" class="btn btn-primary">Začít</a>
+                <a href="#services" class="btn btn-secondary">Více info</a>
             </div>
         </div>
     </header>
 
     <section id="services" class="services">
         <div class="container">
-            <h2 class="section-title">Our Services</h2>
+            <h2 class="section-title">Naše služby</h2>
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">🔧</div>
-                    <h3>Custom Agent Development</h3>
-                    <p>Tailored AI agents designed to meet your specific business requirements. From customer support to data analysis, we build agents that integrate seamlessly with your workflows.</p>
+                    <h3>Vývoj agentů na míru</h3>
+                    <p>AI agenti přesně podle vašich potřeb – od podpory zákazníků přes analýzu dat až po automatizaci procesů. Plně open-source a integrovatelné do vašich systémů.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🚀</div>
-                    <h3>Local Deployment</h3>
-                    <p>We deploy agents on your local infrastructure, ensuring complete data sovereignty, low latency, and no ongoing cloud costs. Your data stays yours.</p>
+                    <h3>Lokální nasazení</h3>
+                    <p>Nasadíme agenty přímo u vás – žádný cloud, žádné měsíční poplatky, data zůstávají vaše. Nízká latence a provoz i offline.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🛠️</div>
-                    <h3>Maintenance & Support</h3>
-                    <p>Ongoing maintenance, updates, and technical support to keep your agents running smoothly. We handle the complexity so you can focus on results.</p>
+                    <h3>Údržba a podpora</h3>
+                    <p>Pravidelné aktualizace, monitoring a rychlá pomoc. Starám se o techniku, vy se soustředíte na byznys.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">📊</div>
-                    <h3>Performance Optimization</h3>
-                    <p>Continuous monitoring and optimization to ensure your agents operate at peak efficiency. We fine-tune models and infrastructure for maximum ROI.</p>
+                    <div class="service-icon">📈</div>
+                    <h3>Optimalizace výkonu</h3>
+                    <p>Průběžné ladění modelů a infrastruktury pro nejlepší výsledky a efektivitu.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🔒</div>
-                    <h3>Security & Compliance</h3>
-                    <p>Enterprise-grade security for your local AI deployment. We ensure compliance with data protection regulations and industry best practices.</p>
+                    <h3>Bezpečnost a compliance</h3>
+                    <p>Enterprise-level zabezpečení pro lokální AI. Soulad s GDPR a dalšími předpisy.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🎓</div>
-                    <h3>Training & Knowledge Transfer</h3>
-                    <p>Comprehensive training for your team to manage and customize agents independently. We empower you to own your AI infrastructure.</p>
+                    <h3>Školení a předání znalostí</h3>
+                    <p>Naučím váš tým samostatně spravovat a upravovat agenty – plná nezávislost.</p>
                 </div>
             </div>
         </div>
@@ -75,25 +78,23 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Why Local AI Agents?</h2>
-                    <p>Local AI agents offer unprecedented advantages over cloud-based solutions:</p>
+                    <h2>Proč lokální AI agenti?</h2>
+                    <p>Lokální řešení přináší výhody, které cloud nikdy nenabídne:</p>
                     <ul>
-                        <li><strong>Complete Privacy:</strong> Your sensitive data never leaves your premises.</li>
-                        <li><strong>Cost Effective:</strong> No recurring subscription fees - pay once, own forever.</li>
-                        <li><strong>Low Latency:</strong> Instant responses without network delays.</li>
-                        <li><strong>Full Customization:</strong> Tailor every aspect to your exact needs.</li>
-                        <li><strong>Offline Operation:</strong> Works without internet connectivity.</li>
+                        <li><strong>Kompletní soukromí:</strong> Data nikdy neopustí vaše servery.</li>
+                        <li><strong>Bez předplatného:</strong> Platíte jednou, vlastníte navždy.</li>
+                        <li><strong>Nízká latence:</strong> Okamžité reakce bez síťového zpoždění.</li>
+                        <li><strong>Plná přizpůsobitelnost:</strong> Měníte cokoli podle potřeby.</li>
+                        <li><strong>Offline provoz:</strong> Funguje i bez internetu.</li>
                     </ul>
-                    <p>At RIPlay, we specialize in bringing the power of local AI to businesses of all sizes. Our expertise ensures you get the benefits of cutting-edge AI without the drawbacks of cloud dependency.</p>
+                    <p>Specializuji se na open-source AI, které dává firmám kontrolu zpět do rukou – bez ekosystémů a vendorů.</p>
                 </div>
-                <div class="about-image">
-                    <div class="ai-visual">
-                        <div class="ai-brain">🧠</div>
-                        <div class="ai-nodes">
-                            <span class="node">●</span>
-                            <span class="node">●</span>
-                            <span class="node">●</span>
-                        </div>
+                <div class="ai-visual">
+                    <div class="ai-brain">🧠</div>
+                    <div class="ai-nodes">
+                        <span class="node">●</span>
+                        <span class="node">●</span>
+                        <span class="node">●</span>
                     </div>
                 </div>
             </div>
@@ -102,27 +103,30 @@
 
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Get In Touch</h2>
+            <h2 class="section-title">Kontakt</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Let's Discuss Your AI Needs</h3>
-                    <p>Ready to explore local AI agents for your business? Contact us for a free consultation.</p>
+                    <h3>Pojďme probrat váš projekt</h3>
+                    <p>Bezplatná konzultace – napište nebo zavolejte. 5.0 ★★★★★ (6 recenzí na Google).</p>
                     <div class="contact-details">
-                        <p>📧 <a href="mailto:stanwesly@protonmail.com">stanwesly@protonmail.com</a></p>
-                        <p>🌐 <a href="https://github.com/riplay">github.com/Aeell</a></p>
+                        <p>Email: <a href="mailto:stanwesly@protonmail.com">stanwesly@protonmail.com</a></p>
+                        <p>Telefon: <a href="tel:+420776479855">+420 776 479 855</a></p>
+                        <p>Adresa: Mokrá 68, 460 01 Liberec-Machnín</p>
+                        <p>GitHub: <a href="https://github.com/Aeell" target="_blank">github.com/Aeell</a></p>
+                        <p><a href="https://g.co/kgs/5m6Z8q2" target="_blank">Google Business profil</a></p>
                     </div>
                 </div>
                 <form class="contact-form" id="contactForm">
                     <div class="form-group">
-                        <input type="text" id="name" name="name" placeholder="Your Name" required>
+                        <input type="text" id="name" name="name" placeholder="Vaše jméno" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" id="email" name="email" placeholder="Your Email" required>
+                        <input type="email" id="email" name="email" placeholder="Váš email" required>
                     </div>
                     <div class="form-group">
-                        <textarea id="message" name="message" rows="5" placeholder="Tell us about your project" required></textarea>
+                        <textarea id="message" name="message" rows="5" placeholder="Popište, co potřebujete" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
+                    <button type="submit" class="btn btn-primary">Odeslat zprávu</button>
                 </form>
             </div>
         </div>
@@ -132,18 +136,17 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <span class="logo-icon">🤖</span>
-                    <span class="logo-text">RIPlay</span>
+                    <img src="logo.png" alt="RIPlay">
                 </div>
-                <p class="footer-tagline">Local AI Agents for Modern Businesses</p>
+                <p class="footer-tagline">Lokální AI bez kompromisů</p>
                 <div class="footer-links">
-                    <a href="#services">Services</a>
-                    <a href="#about">About</a>
-                    <a href="#contact">Contact</a>
+                    <a href="#services">Služby</a>
+                    <a href="#about">O nás</a>
+                    <a href="#contact">Kontakt</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 RIPlay. All rights reserved.</p>
+                <p>© 2026 RIPlay. Všechna práva vyhrazena.</p>
             </div>
         </div>
     </footer>
