--- a/cs.html
+++ b/cs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RIPlay - Lokální řešení AI agentů</title>
+    <title>RIPlay - Lokální Řešení AI Agentů</title>
     <link rel="icon" href="logo.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,10 +25,9 @@
                 <a href="index.html"><img src="img/en.png" alt="English"></a>
             </div>
         </nav>
-
         <div class="hero-content">
-            <h1>Lokální AI agenti<br>pro vaše podnikání</h1>
-            <p class="hero-subtitle">Jako IT freelancer nabízím open-source AI automatizace a agenty bez vendor lock-inu a cloudové závislosti. Běží lokálně na vašich strojích – plné vlastnictví, maximální soukromí, žádné předplatné.</p>
+            <h1>Lokální AI Agenti<br>Pro Vaše Podnikání</h1>
+            <p class="hero-subtitle">Jako IT freelancer nabízím open-source, bez ekosystémového závislosti AI automatizace a agenty, které běží lokálně na vašich systémech. Plné vlastnictví, maximální soukromí, žádné předplatné nebo uzamčení.</p>
             <div class="hero-cta">
                 <a href="#contact" class="btn btn-primary">Začít</a>
                 <a href="#services" class="btn btn-secondary">Více info</a>
@@ -38,36 +37,36 @@
 
     <section id="services" class="services">
         <div class="container">
-            <h2 class="section-title">Naše služby</h2>
+            <h2 class="section-title">Naše Služby</h2>
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">🔧</div>
-                    <h3>Vývoj agentů na míru</h3>
+                    <h3>Vývoj Agentů Na Míru</h3>
                     <p>AI agenti přesně podle vašich potřeb – od podpory zákazníků přes analýzu dat až po automatizaci procesů. Plně open-source a integrovatelné do vašich systémů.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🚀</div>
-                    <h3>Lokální nasazení</h3>
+                    <h3>Lokální Nasazení</h3>
                     <p>Nasadíme agenty přímo u vás – žádný cloud, žádné měsíční poplatky, data zůstávají vaše. Nízká latence a provoz i offline.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🛠️</div>
-                    <h3>Údržba a podpora</h3>
+                    <h3>Údržba a Podpora</h3>
                     <p>Pravidelné aktualizace, monitoring a rychlá pomoc. Starám se o techniku, vy se soustředíte na byznys.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">📈</div>
-                    <h3>Optimalizace výkonu</h3>
+                    <h3>Optimalizace Výkonu</h3>
                     <p>Průběžné ladění modelů a infrastruktury pro nejlepší výsledky a efektivitu.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🔒</div>
-                    <h3>Bezpečnost a compliance</h3>
+                    <h3>Bezpečnost a Compliance</h3>
                     <p>Enterprise-level zabezpečení pro lokální AI. Soulad s GDPR a dalšími předpisy.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🎓</div>
-                    <h3>Školení a předání znalostí</h3>
+                    <h3>Školení a Předání Znalostí</h3>
                     <p>Naučím váš tým samostatně spravovat a upravovat agenty – plná nezávislost.</p>
                 </div>
             </div>
@@ -78,14 +77,14 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Proč lokální AI agenti?</h2>
+                    <h2>Proč Lokální AI Agenti?</h2>
                     <p>Lokální řešení přináší výhody, které cloud nikdy nenabídne:</p>
                     <ul>
-                        <li><strong>Kompletní soukromí:</strong> Data nikdy neopustí vaše servery.</li>
-                        <li><strong>Bez předplatného:</strong> Platíte jednou, vlastníte navždy.</li>
-                        <li><strong>Nízká latence:</strong> Okamžité reakce bez síťového zpoždění.</li>
-                        <li><strong>Plná přizpůsobitelnost:</strong> Měníte cokoli podle potřeby.</li>
-                        <li><strong>Offline provoz:</strong> Funguje i bez internetu.</li>
+                        <li><strong>Kompletní Soukromí:</strong> Data nikdy neopustí vaše servery.</li>
+                        <li><strong>Bez Předplatného:</strong> Platíte jednou, vlastníte navždy.</li>
+                        <li><strong>Nízká Latence:</strong> Okamžité reakce bez síťového zpoždění.</li>
+                        <li><strong>Plná Přizpůsobitelnost:</strong> Měníte cokoli podle potřeby.</li>
+                        <li><strong>Offline Provoz:</strong> Funguje i bez internetu.</li>
                     </ul>
                     <p>Specializuji se na open-source AI, které dává firmám kontrolu zpět do rukou – bez ekosystémů a vendorů.</p>
                 </div>
@@ -103,30 +102,31 @@
 
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Kontakt</h2>
+            <h2 class="section-title">Kontaktujte Nás</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Pojďme probrat váš projekt</h3>
-                    <p>Bezplatná konzultace – napište nebo zavolejte. 5.0 ★★★★★ (6 recenzí na Google).</p>
+                    <h3>Pojďme Probrat Vaše Potřeby v AI</h3>
+                    <p>Připraveni prozkoumat lokální AI agenty pro váš byznys? Bezplatná konzultace. 5.0 hvězdiček na Google z 6 recenzí.</p>
                     <div class="contact-details">
                         <p>Email: <a href="mailto:stanwesly@protonmail.com">stanwesly@protonmail.com</a></p>
                         <p>Telefon: <a href="tel:+420776479855">+420 776 479 855</a></p>
-                        <p>Adresa: Mokrá 68, 460 01 Liberec-Machnín</p>
-                        <p>GitHub: <a href="https://github.com/Aeell" target="_blank">github.com/Aeell</a></p>
-                        <p><a href="https://g.co/kgs/5m6Z8q2" target="_blank">Google Business profil</a></p>
+                        <p>Adresa: Mokra 68, 460 01 Liberec-Machnin, Česká republika</p>
+                        <p>GitHub: <a href="https://github.com/Aeell">github.com/Aeell</a></p>
+                        <p><a href="https://g.co/kgs/5m6Z8q2" target="_blank">Zobrazit na Google Maps</a></p>
                     </div>
                 </div>
-                <form class="contact-form" id="contactForm">
+                <form class="contact-form" action="https://formspree.io/f/xwvnpejd" method="POST">
                     <div class="form-group">
-                        <input type="text" id="name" name="name" placeholder="Vaše jméno" required>
+                        <input type="text" name="name" placeholder="Vaše Jméno" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" id="email" name="email" placeholder="Váš email" required>
+                        <input type="email" name="email" placeholder="Váš Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea id="message" name="message" rows="5" placeholder="Popište, co potřebujete" required></textarea>
+                        <textarea name="message" rows="5" placeholder="Popište svůj projekt" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Odeslat zprávu</button>
+                    <input type="hidden" name="_subject" value="Nová poptávka RIPlay z webu">
+                    <button type="submit" class="btn btn-primary">Odeslat Zprávu</button>
                 </form>
             </div>
         </div>
@@ -136,9 +136,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="logo.png" alt="RIPlay">
+                    <img src="logo.png" alt="RIPlay Logo">
                 </div>
-                <p class="footer-tagline">Lokální AI bez kompromisů</p>
+                <p class="footer-tagline">Lokální AI Agenti Pro Moderní Firmy</p>
                 <div class="footer-links">
                     <a href="#services">Služby</a>
                     <a href="#about">O nás</a>
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2026 RIPlay. Všechna práva vyhrazena.</p>
+                <p>&copy; 2026 RIPlay. Všechna práva vyhrazena.</p>
             </div>
         </div>
     </footer>
