feat: add SEO meta tags, JSON-LD schema, and sitemap.xml

--- a/cs.html
+++ b/cs.html
@@ -3,18 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RIPlay - Lokální Řešení AI Agentů</title>
+    <title>RIPlay – Lokální AI Agenti | Soukromí na prvním místě & Open-Source</title>
+    <meta name="description" content="Vývoj a nasazení vlastních lokálních AI agentů s maximálním soukromím. Žádný cloud, žádné předplatné. Open-source automatizace pro firmy. Bezplatná konzultace – Liberec.">
+    <meta name="keywords" content="lokální AI agenti, open source AI, soukromí AI, AI automatizace, lokální nasazení AI, offline AI, vlastní AI agenti, AI freelancer Liberec">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="RIPlay – Stan Wesly">
+    <link rel="canonical" href="https://aeell.github.io/riplay/">
     <link rel="icon" href="logo.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "RIPlay – Lokální AI Agent Solutions",
+      "description": "Vlastní lokální AI agenti – soukromí na prvním místě, open source, bez závislosti na cloudu",
+      "url": "https://aeell.github.io/riplay/cs.html",
+      "logo": "https://aeell.github.io/riplay/logo.png",
+      "telephone": "+420776479855",
+      "email": "stanwesly@protonmail.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Mokrá 68",
+        "addressLocality": "Liberec-Machnín",
+        "postalCode": "460 01",
+        "addressCountry": "CZ"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 50.767113,
+        "longitude": 15.056199
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
+        "opens": "11:00",
+        "closes": "17:00"
+      },
+      "sameAs": [
+        "https://github.com/Aeell",
+        "https://g.co/kgs/5m6Z8q2"
+      ]
+    }
+    </script>
 </head>
 <body>
     <header class="hero">
         <nav class="navbar">
             <div class="logo">
-                <img src="logo.png" alt="RIPlay Logo">
+                <img src="logo.png" alt="RIPlay – Lokální AI Agenti Logo" width="180" height="60">
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Služby</a></li>
@@ -22,7 +61,7 @@
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
             <div class="lang-toggle">
-                <a href="index.html"><img src="img/en.png" alt="English"></a>
+                <a href="index.html"><img src="img/en.png" alt="English language" width="32" height="20"></a>
             </div>
         </nav>
         <div class="hero-content">
@@ -136,7 +175,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="logo.png" alt="RIPlay Logo">
+                    <img src="logo.png" alt="RIPlay – Lokální AI Agenti Logo" width="180" height="60">
                 </div>
                 <p class="footer-tagline">Lokální AI Agenti Pro Moderní Firmy</p>
                 <div class="footer-links">
