--- a/index.html
+++ b/index.html
@@ -3,18 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RIPlay - Local AI Agent Solutions</title>
+    <title>RIPlay – Local AI Agents | Privacy-First & Open-Source Solutions</title>
+    <meta name="description" content="Build and deploy custom local AI agents with full data privacy. No cloud lock-in, no subscriptions. Open-source automations for businesses. Free consultation – Liberec, Czech Republic.">
+    <meta name="keywords" content="local AI agents, open source AI, privacy first AI, AI automation, local deployment AI, offline AI, custom AI agents, Liberec AI freelancer">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="RIPlay – Stan Wesly">
+    <link rel="canonical" href="https://aeell.github.io/riplay/">
     <link rel="icon" href="logo.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "RIPlay – Local AI Agent Solutions",
+      "description": "Custom local AI agents – privacy first, open source, no cloud dependency",
+      "url": "https://aeell.github.io/riplay/",
+      "logo": "https://aeell.github.io/riplay/logo.png",
+      "telephone": "+420776479855",
+      "email": "stanwesly@protonmail.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Mokrá 68",
+        "addressLocality": "Liberec-Machnín",
+        "postalCode": "460 01",
+        "addressCountry": "CZ"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 50.767113,
+        "longitude": 15.056199
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
+        "opens": "11:00",
+        "closes": "17:00"
+      },
+      "sameAs": [
+        "https://github.com/Aeell",
+        "https://g.co/kgs/5m6Z8q2"
+      ]
+    }
+    </script>
 </head>
 <body>
     <header class="hero">
         <nav class="navbar">
             <div class="logo">
-                <img src="logo.png" alt="RIPlay Logo">
+                <img src="logo.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
@@ -22,7 +61,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="lang-toggle">
-                <a href="cs.html"><img src="img/cs.png" alt="Česky"></a>
+                <a href="cs.html"><img src="img/cs.png" alt="Czech language – Český" width="32" height="20"></a>
             </div>
         </nav>
         <div class="hero-content">
@@ -136,7 +175,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="logo.png" alt="RIPlay Logo">
+                    <img src="logo.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
                 </div>
                 <p class="footer-tagline">Local AI Agents for Modern Businesses</p>
                 <div class="footer-links">
