Restructure: Add tools directory with GoogleFont2SVG and Converter, update paths and logo

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
     <header class="hero">
         <nav class="navbar">
             <div class="logo">
-                <img src="logo.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
+                <img src="logo-trans-bkgr.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
+                <li><a href="#tools">Tools</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -107,6 +108,27 @@
                     <div class="service-icon">🎓</div>
                     <h3>Training & Knowledge Transfer</h3>
                     <p>Comprehensive training for your team to manage and customize agents independently. We empower you to own your AI infrastructure.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="tools" class="tools">
+        <div class="container">
+            <h2 class="section-title">Free Tools</h2>
+            <p class="section-subtitle">Explore our collection of useful tools for developers and designers.</p>
+            <div class="tools-grid">
+                <div class="tool-card">
+                    <div class="tool-icon">🔤</div>
+                    <h3>GoogleFont2SVG</h3>
+                    <p>Convert Google Fonts to SVG paths for high-quality vector graphics. Perfect for designers and developers needing scalable font-based icons and text.</p>
+                    <a href="tools/googlefont2svg/" class="btn btn-tool">Try It Now</a>
+                </div>
+                <div class="tool-card">
+                    <div class="tool-icon">🔄</div>
+                    <h3>Universal File Converter</h3>
+                    <p>Convert files between various formats - from videos to PDFs, images to documents, and more. A truly universal online converter.</p>
+                    <a href="tools/converter/" class="btn btn-tool">Try It Now</a>
                 </div>
             </div>
         </div>
@@ -175,7 +197,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="logo.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
+                    <img src="logo-trans-bkgr.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
                 </div>
                 <p class="footer-tagline">Local AI Agents for Modern Businesses</p>
                 <div class="footer-links">
