Major update: Czech as default language, SEO optimization for tools

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RIPlay – Local AI Agents | Privacy-First & Open-Source Solutions</title>
-    <meta name="description" content="Build and deploy custom local AI agents with full data privacy. No cloud lock-in, no subscriptions. Open-source automations for businesses. Free consultation – Liberec, Czech Republic.">
-    <meta name="keywords" content="local AI agents, open source AI, privacy first AI, AI automation, local deployment AI, offline AI, custom AI agents, Liberec AI freelancer">
+    <title>RIPlay – Lokální AI Agenti | Soukromí na prvním místě & Open-Source</title>
+    <meta name="description" content="Vývoj a nasazení vlastních lokálních AI agentů s maximálním soukromím. Žádný cloud, žádné předplatné. Open-source automatizace pro firmy. Bezplatná konzultace – Liberec.">
+    <meta name="keywords" content="lokální AI agenti, open source AI, soukromí AI, AI automatizace, lokální nasazení AI, offline AI, vlastní AI agenti, AI freelancer Liberec">
     <meta name="robots" content="index, follow">
     <meta name="author" content="RIPlay – Stan Wesly">
-    <link rel="canonical" href="https://aeell.github.io/riplay/">
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="canonical" href="https://riplay.cz/">
+    <link rel="alternate" hreflang="cs" href="https://riplay.cz/">
+    <link rel="alternate" hreflang="en" href="https://riplay.cz/en.html">
+    <link rel="icon" href="logo-trans-bkgr.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,10 +20,10 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "RIPlay – Local AI Agent Solutions",
-      "description": "Custom local AI agents – privacy first, open source, no cloud dependency",
-      "url": "https://aeell.github.io/riplay/",
-      "logo": "https://aeell.github.io/riplay/logo.png",
+      "name": "RIPlay – Lokální AI Agent Solutions",
+      "description": "Vlastní lokální AI agenti – soukromí na prvním místě, open source, bez závislosti na cloudu",
+      "url": "https://riplay.cz/",
+      "logo": "https://riplay.cz/logo-trans-bkgr.png",
       "telephone": "+420776479855",
       "email": "stanwesly@protonmail.com",
       "address": {
@@ -53,61 +55,61 @@
     <header class="hero">
         <nav class="navbar">
             <div class="logo">
-                <img src="logo-trans-bkgr.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
+                <img src="logo-trans-bkgr.png" alt="RIPlay – Lokální AI Agenti Logo" width="180" height="60">
             </div>
             <ul class="nav-links">
-                <li><a href="#services">Services</a></li>
-                <li><a href="#tools">Tools</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#services">Služby</a></li>
+                <li><a href="#tools">Nástroje</a></li>
+                <li><a href="#about">O nás</a></li>
+                <li><a href="#contact">Kontakt</a></li>
             </ul>
             <div class="lang-toggle">
-                <a href="cs.html"><img src="img/cs.png" alt="Czech language – Český" width="32" height="20"></a>
+                <a href="en.html"><img src="img/en.png" alt="English language" width="32" height="20"></a>
             </div>
         </nav>
         <div class="hero-content">
-            <h1>Local AI Agents<br>Built for Your Business</h1>
-            <p class="hero-subtitle">As an IT freelancer, I offer open-source, ecosystem-free AI automations and agents that run locally on your systems. Full ownership, max privacy, no subscriptions or lock-ins.</p>
+            <h1>Lokální AI Agenti<br>Pro Vaše Podnikání</h1>
+            <p class="hero-subtitle">Jako IT freelancer nabízím open-source, bez ekosystémového závislosti AI automatizace a agenty, které běží lokálně na vašich systémech. Plné vlastnictví, maximální soukromí, žádné předplatné nebo uzamčení.</p>
             <div class="hero-cta">
-                <a href="#contact" class="btn btn-primary">Get Started</a>
-                <a href="#services" class="btn btn-secondary">Learn More</a>
+                <a href="#contact" class="btn btn-primary">Začít</a>
+                <a href="#services" class="btn btn-secondary">Více info</a>
             </div>
         </div>
     </header>
 
     <section id="services" class="services">
         <div class="container">
-            <h2 class="section-title">Our Services</h2>
+            <h2 class="section-title">Naše Služby</h2>
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">🔧</div>
-                    <h3>Custom Agent Development</h3>
-                    <p>Tailored AI agents designed to meet your specific business requirements. From customer support to data analysis, we build agents that integrate seamlessly with your workflows.</p>
+                    <h3>Vývoj Agentů Na Míru</h3>
+                    <p>AI agenti přesně podle vašich potřeb – od podpory zákazníků přes analýzu dat až po automatizaci procesů. Plně open-source a integrovatelné do vašich systémů.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🚀</div>
-                    <h3>Local Deployment</h3>
-                    <p>We deploy agents on your local infrastructure, ensuring complete data sovereignty, low latency, and no ongoing cloud costs. Your data stays yours.</p>
+                    <h3>Lokální Nasazení</h3>
+                    <p>Nasadíme agenty přímo u vás – žádný cloud, žádné měsíční poplatky, data zůstávají vaše. Nízká latence a provoz i offline.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🛠️</div>
-                    <h3>Maintenance & Support</h3>
-                    <p>Ongoing maintenance, updates, and technical support to keep your agents running smoothly. We handle the complexity so you can focus on results.</p>
+                    <h3>Údržba a Podpora</h3>
+                    <p>Pravidelné aktualizace, monitoring a rychlá pomoc. Starám se o techniku, vy se soustředíte na byznys.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">📈</div>
-                    <h3>Performance Optimization</h3>
-                    <p>Continuous monitoring and optimization to ensure your agents operate at peak efficiency. We fine-tune models and infrastructure for maximum ROI.</p>
+                    <h3>Optimalizace Výkonu</h3>
+                    <p>Průběžné ladění modelů a infrastruktury pro nejlepší výsledky a efektivitu.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🔒</div>
-                    <h3>Security & Compliance</h3>
-                    <p>Enterprise-grade security for your local AI deployment. We ensure compliance with data protection regulations and industry best practices.</p>
+                    <h3>Bezpečnost a Compliance</h3>
+                    <p>Enterprise-level zabezpečení pro lokální AI. Soulad s GDPR a dalšími předpisy.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🎓</div>
-                    <h3>Training & Knowledge Transfer</h3>
-                    <p>Comprehensive training for your team to manage and customize agents independently. We empower you to own your AI infrastructure.</p>
+                    <h3>Školení a Předání Znalostí</h3>
+                    <p>Naučím váš tým samostatně spravovat a upravovat agenty – plná nezávislost.</p>
                 </div>
             </div>
         </div>
@@ -115,20 +117,20 @@
 
     <section id="tools" class="tools">
         <div class="container">
-            <h2 class="section-title">Free Tools</h2>
-            <p class="section-subtitle">Explore our collection of useful tools for developers and designers.</p>
+            <h2 class="section-title">Bezplatné Nástroje</h2>
+            <p class="section-subtitle">Prozkoumejte naši kolekci užitečných nástrojů pro vývojáře a designéry.</p>
             <div class="tools-grid">
                 <div class="tool-card">
                     <div class="tool-icon">🔤</div>
                     <h3>GoogleFont2SVG</h3>
-                    <p>Convert Google Fonts to SVG paths for high-quality vector graphics. Perfect for designers and developers needing scalable font-based icons and text.</p>
-                    <a href="tools/googlefont2svg/" class="btn btn-tool">Try It Now</a>
+                    <p>Převeďte písma Google Fonts na SVG cesty pro vysoce kvalitní vektorovou grafiku. Ideální pro designéry a vývojáře.</p>
+                    <a href="tools/googlefont2svg/" class="btn btn-tool">Vyzkoušet</a>
                 </div>
                 <div class="tool-card">
                     <div class="tool-icon">🔄</div>
-                    <h3>Universal File Converter</h3>
-                    <p>Convert files between various formats - from videos to PDFs, images to documents, and more. A truly universal online converter.</p>
-                    <a href="tools/converter/" class="btn btn-tool">Try It Now</a>
+                    <h3>Univerzální Převodník Souborů</h3>
+                    <p>Převeďte soubory mezi různými formáty - videa, PDF, obrázky, dokumenty a další. Skutečně univerzální online převodník.</p>
+                    <a href="tools/converter/" class="btn btn-tool">Vyzkoušet</a>
                 </div>
             </div>
         </div>
@@ -138,16 +140,16 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Why Local AI Agents?</h2>
-                    <p>Local AI agents offer unprecedented advantages over cloud-based solutions:</p>
+                    <h2>Proč Lokální AI Agenti?</h2>
+                    <p>Lokální řešení přináší výhody, které cloud nikdy nenabídne:</p>
                     <ul>
-                        <li><strong>Complete Privacy:</strong> Your sensitive data never leaves your premises.</li>
-                        <li><strong>Cost Effective:</strong> No recurring subscription fees - pay once, own forever.</li>
-                        <li><strong>Low Latency:</strong> Instant responses without network delays.</li>
-                        <li><strong>Full Customization:</strong> Tailor every aspect to your exact needs.</li>
-                        <li><strong>Offline Operation:</strong> Works without internet connectivity.</li>
+                        <li><strong>Kompletní Soukromí:</strong> Data nikdy neopustí vaše servery.</li>
+                        <li><strong>Bez Předplatného:</strong> Platíte jednou, vlastníte navždy.</li>
+                        <li><strong>Nízká Latence:</strong> Okamžité reakce bez síťového zpoždění.</li>
+                        <li><strong>Plná Přizpůsobitelnost:</strong> Měníte cokoli podle potřeby.</li>
+                        <li><strong>Offline Provoz:</strong> Funguje i bez internetu.</li>
                     </ul>
-                    <p>At RIPlay, we specialize in bringing the power of local AI to businesses of all sizes. Our expertise ensures you get the benefits of cutting-edge AI without the drawbacks of cloud dependency.</p>
+                    <p>Specializuji se na open-source AI, které dává firmám kontrolu zpět do rukou – bez ekosystémů a vendorů.</p>
                 </div>
                 <div class="ai-visual">
                     <div class="ai-brain">🧠</div>
@@ -163,31 +165,31 @@
 
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Get In Touch</h2>
+            <h2 class="section-title">Kontaktujte Nás</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Let's Discuss Your AI Needs</h3>
-                    <p>Ready to explore local AI agents for your business? Contact us for a free consultation. 5.0 stars on Google from 6 reviews.</p>
+                    <h3>Pojďme Probrat Vaše Potřeby v AI</h3>
+                    <p>Připraveni prozkoumat lokální AI agenty pro váš byznys? Bezplatná konzultace. 5.0 hvězdiček na Google z 6 recenzí.</p>
                     <div class="contact-details">
                         <p>Email: <a href="mailto:stanwesly@protonmail.com">stanwesly@protonmail.com</a></p>
-                        <p>Phone: <a href="tel:+420776479855">+420 776 479 855</a></p>
-                        <p>Address: Mokra 68, 460 01 Liberec-Machnin, Czech Republic</p>
+                        <p>Telefon: <a href="tel:+420776479855">+420 776 479 855</a></p>
+                        <p>Adresa: Mokra 68, 460 01 Liberec-Machnin, Česká republika</p>
                         <p>GitHub: <a href="https://github.com/Aeell">github.com/Aeell</a></p>
-                        <p><a href="https://g.co/kgs/5m6Z8q2" target="_blank">View on Google Maps</a></p>
+                        <p><a href="https://g.co/kgs/5m6Z8q2" target="_blank">Zobrazit na Google Maps</a></p>
                     </div>
                 </div>
                 <form class="contact-form" action="https://formspree.io/f/xwvnpejd" method="POST">
                     <div class="form-group">
-                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="text" name="name" placeholder="Vaše Jméno" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" name="email" placeholder="Your Email" required>
+                        <input type="email" name="email" placeholder="Váš Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea name="message" rows="5" placeholder="Tell us about your project" required></textarea>
+                        <textarea name="message" rows="5" placeholder="Popište svůj projekt" required></textarea>
                     </div>
-                    <input type="hidden" name="_subject" value="New RIPlay inquiry from website">
-                    <button type="submit" class="btn btn-primary">Send Message</button>
+                    <input type="hidden" name="_subject" value="Nová poptávka RIPlay z webu">
+                    <button type="submit" class="btn btn-primary">Odeslat Zprávu</button>
                 </form>
             </div>
         </div>
@@ -197,17 +199,18 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="logo-trans-bkgr.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
+                    <img src="logo-trans-bkgr.png" alt="RIPlay – Lokální AI Agenti Logo" width="180" height="60">
                 </div>
-                <p class="footer-tagline">Local AI Agents for Modern Businesses</p>
+                <p class="footer-tagline">Lokální AI Agenti Pro Moderní Firmy</p>
                 <div class="footer-links">
-                    <a href="#services">Services</a>
-                    <a href="#about">About</a>
-                    <a href="#contact">Contact</a>
+                    <a href="#services">Služby</a>
+                    <a href="#tools">Nástroje</a>
+                    <a href="#about">O nás</a>
+                    <a href="#contact">Kontakt</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 RIPlay. All rights reserved.</p>
+                <p>&copy; 2026 RIPlay. Všechna práva vyhrazena.</p>
             </div>
         </div>
     </footer>
